--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ version: 2.0.0
 email: themeix@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Arnica Responsive Static Jekyll Theme For Blogging.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://proskahn.github.io/Arnica/" # the subpath of your site, e.g. /blog
 url: "https://proskahn.github.io/Arnica/" # the base hostname & protocol for your site, e.g. https://example.com
 
 
